thesis final, backup

--- a/final/mybib.bib
+++ b/final/mybib.bib
@@ -233,3 +233,10 @@ R. Macrae and S. Dixon, “,” in , Jul. 2010, pp. 725–726.
   month = {August},
   pages = {888-905}
 }
+@inproceedings{yazawa2013,
+  author = {K. Yazawa and D. Sakaue and K. Nagira and K. Itoyama and H. Okuno},
+  title = {Audio-based Guitar Tablature Transcription using Multipitch Analysis and Playability Constraints},
+  booktitle = {Proceedings of the International Conference on Acoustics, Speech, and Signal Processing},
+  pages = {196-200},
+  year = {2013}
+}
